test/fails/bad_types/bad_name3.lgl
void main() { int main = 5; print main; }
